--- a/WpfApp1/View/LoginView.xaml
+++ b/WpfApp1/View/LoginView.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1.View"
+        xmlns:common="clr-namespace:WpfApp1.Common"
         mc:Ignorable="d" Name="window"
         Title="系统登录" Height="600" Width="360"
         FontFamily="Microsoft YaHei" FontWeight="ExtraLight"
@@ -251,12 +252,18 @@
                 <RowDefinition Height="3*"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            <Border Background="#007dfa" CornerRadius="10,10,0,0"/>
+            <Border Background="#007dfa" CornerRadius="10,10,0,0" MouseLeftButtonDown="WinMove_MouseLeftButtonDown"/>
+            <ProgressBar  x:Name="ShowProgress"
+                     
+                     Height="5"
+                     IsIndeterminate="true" 
+                     Visibility="{Binding ShowProgress}" Margin="0,0,0,326" Grid.Row="1" />
             <Button VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" Height="30" Template="{StaticResource CloseButtonTemplate}"
                     Command="{Binding CloseWindowCommand}"
                     CommandParameter="{Binding ElementName=window}">
 
             </Button>
+            
 
             <StackPanel VerticalAlignment="Bottom" Margin="0,0,0,20">
                 <Border Width="100" Height="100" Margin="0,0,0,10">
@@ -266,7 +273,8 @@
                 </Border>
                 <TextBlock Text="Wilkommen!!" HorizontalAlignment="Center" FontSize="30" FontStyle="Oblique" Foreground="White"/>
             </StackPanel>
-            <Grid Grid.Row="1" Margin="20,20">
+            <Grid Grid.Row="1" Margin="20,20" 
+                  FocusManager.FocusedElement="{Binding ElementName=txtUserName}"><!--光标自动出现在username栏-->
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
@@ -275,16 +283,26 @@
                     <RowDefinition MinHeight="23" Height="auto"/>
 
                 </Grid.RowDefinitions>
-                <TextBox Height="40" Text="123" FontSize="20" Foreground="#555" Style="{DynamicResource UserNameTextBoxStyle}">
+                <TextBox Height="40" Text="{Binding LoginModel.UserName}" FontSize="20" 
+                         Foreground="#555" Style="{DynamicResource UserNameTextBoxStyle}" 
+                         TextChanged="TextBox_TextChanged_1"
+                         Name="txtUserName">
 
                 </TextBox>
-                <PasswordBox Grid.Row="1" Height="40" Style="{DynamicResource PasswordBoxStyle1}"/>
-                <TextBox Grid.Row="2" Height="40" TextChanged="TextBox_TextChanged" Style="{DynamicResource ValidationCodeTextBoxStyle}"/>
-                <Button Content="Login" Grid.Row="3" Height="40" Template="{StaticResource LoginButtonTemplate}"/>
-                <TextBlock Text="&#xe603;" Foreground="Green" FontSize="30" Grid.Row="4"
+                <PasswordBox Grid.Row="1" Height="40" Style="{DynamicResource PasswordBoxStyle1}"
+                             common:PasswordHelper.Attach="True"
+                             common:PasswordHelper.Password="{Binding LoginModel.Password,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox Grid.Row="2" Text="{Binding LoginModel.ValidationCode}" Height="40" TextChanged="TextBox_TextChanged" Style="{DynamicResource ValidationCodeTextBoxStyle}"/>
+                <Button Content="Login" Grid.Row="3" Height="40" Template="{StaticResource LoginButtonTemplate}"
+                        Command="{Binding LoginCommand}"
+                        CommandParameter="{Binding ElementName=window}"
+                        />
+                <TextBlock Text="{Binding ErrorMessage}" Foreground="Green" FontSize="30" Grid.Row="4"
                            TextWrapping="Wrap"
                            LineHeight="20"
-                         FontFamily="D:\C#asp.Net core workplace\WpfApp1\WpfApp1\Asset\Fonts\iconfont.ttf"/>
+                         FontFamily="D:\C#asp.Net core workplace\WpfApp1\WpfApp1\Asset\Fonts\iconfont.ttf"
+                           HorizontalAlignment="Center"/>
+                
             </Grid>
             <Grid Grid.Row="2" Margin="20,0">
                 <Grid.RowDefinitions>
