--- a/WpfApp1/View/FirstPageView.xaml
+++ b/WpfApp1/View/FirstPageView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp1.View"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+             xmlns:lvcs="clr-namespace:LiveCharts;assembly=LiveCharts"
              xmlns:con="clr-namespace:Controls;assembly=Controls"
              mc:Ignorable="d" 
              d:DesignHeight="1042" d:DesignWidth="800">
@@ -241,7 +242,8 @@
 
                 </Border>
             </Grid>
-
+            
+            <!--仪表-->
             <Grid Grid.Column="1" Grid.RowSpan="2"><!--rowspan并行-->
                 <Grid.RowDefinitions>
                     <RowDefinition Height="40"/>
@@ -270,7 +272,11 @@
                         </StackPanel>
                         <StackPanel HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="30,0,0,20">
                             <TextBlock Text="当前使用率" FontSize="14" Foreground="#3f4c5d"/>
-                            <TextBlock Text="120%" FontSize="18" FontWeight="Bold" Foreground="#3f4c5d" HorizontalAlignment="Center"/>
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <TextBlock Text="{Binding InstrumentValue}" FontSize="18" FontWeight="Bold" Foreground="#3f4c5d" HorizontalAlignment="Center"/>
+                                <TextBlock Text="%" FontSize="18" FontWeight="Bold" Foreground="#3f4c5d" HorizontalAlignment="Center"/>
+                            </StackPanel>
+                            
                         </StackPanel>
                         <StackPanel HorizontalAlignment="right" VerticalAlignment="Bottom" Margin="0,0,30,20">
                             <StackPanel Orientation="Horizontal" VerticalAlignment="top" HorizontalAlignment="Left" Margin="5">
@@ -296,6 +302,69 @@
                     
                 </Border>
             </Grid>
+            
+            
+        </Grid>
+        <Grid Margin="10,0" Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBlock Text="信息总览" Foreground="#3f4c5d" VerticalAlignment="Center"
+                           FontSize="15" FontWeight="Bold"/>
+            <TextBlock HorizontalAlignment="Right" VerticalAlignment="Center">
+                    <Hyperlink>详情</Hyperlink>
+            </TextBlock>
+
+            <StackPanel Grid.Row="1">
+                <Border Background="White" CornerRadius="10" Margin="0,5">
+                    <Border.Effect>
+                        <DropShadowEffect Color="#f2f2f2" ShadowDepth="0" BlurRadius="15" Opacity="0.4" Direction="0"/>
+                    </Border.Effect>
+                    <Grid Height="70">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="3.5*"/>
+
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="AAAAAAAA" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                   Foreground="Gray" FontSize="20"/>
+                        <lvc:PieChart Grid.Column="1" LegendLocation="Right" InnerRadius="15">
+                            <lvc:PieChart.Series>
+                                <lvcs:SeriesCollection>
+                                    <lvc:PieSeries Title="111" Values="12" DataLabels="False"/>
+                                    <lvc:PieSeries Title="111" Values="12" DataLabels="False"/>
+                                    <lvc:PieSeries Title="111" Values="12" DataLabels="False"/>
+                                </lvcs:SeriesCollection>
+                            </lvc:PieChart.Series>
+                            <lvc:PieChart.ChartLegend>
+                                <lvc:DefaultLegend BulletSize="10"/>
+                            </lvc:PieChart.ChartLegend>
+                            <lvc:PieChart.DataTooltip>
+                                <lvc:DefaultLegend BulletSize="10"/>
+                            </lvc:PieChart.DataTooltip>
+                        </lvc:PieChart>
+                        <UniformGrid Columns="5" Grid.Column="2" Margin="10,0,0,0">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="CLOUD" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <TextBlock Text="161" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <TextBlock Text="down" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <TextBlock Text="4%" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Grid>
+                                
+                        </UniformGrid>
+                    </Grid>
+                </Border>
+            </StackPanel>
         </Grid>
 
     </Grid>
