--- a/WpfApp1/View/SecondPageView.xaml
+++ b/WpfApp1/View/SecondPageView.xaml
@@ -6,7 +6,85 @@
              xmlns:local="clr-namespace:WpfApp1.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <TextBlock Text="bbbbbbbbbbbbbbbbbbbbbbb" FontSize="20" Foreground="White"/>
-    </Grid>
+    <UserControl.Resources>
+        <ControlTemplate TargetType="RadioButton" x:Key="CategoryItemButtonTemplate">
+            <Grid Background="Transparent">
+                <Border Background="#eee" CornerRadius="5" Name="back">
+                    <TextBlock Text="{TemplateBinding Content}" Margin="15,6" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                </Border>
+            </Grid>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsChecked" Value="True">
+                    <Setter Property="Background" Value="Orange" TargetName="back"/>
+                    <Setter Property="Foreground" Value="White"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+    </UserControl.Resources>
+    <Border CornerRadius="5" Background="White">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Border BorderBrush="#ddd" BorderThickness="0,0,0,1" Margin="20,0">
+                <Grid Margin="10,18">
+                    <Grid.RowDefinitions>
+                        <RowDefinition MinHeight="35" Height="auto"/>
+                        <RowDefinition MinHeight="35" Height="auto"/>
+                        <RowDefinition MinHeight="35" Height="auto"/>
+                    </Grid.RowDefinitions>
+                    
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <TextBlock Text="课程分类" VerticalAlignment="Center" Margin="0,0,10,0" Foreground="#666"/>
+                        <ItemsControl ItemsSource="{Binding CategoryCourses}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Horizontal"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                    <RadioButton Content="{Binding CategoryName}" IsChecked="{Binding IsSelected}" Template="{StaticResource CategoryItemButtonTemplate}" Margin="5,0"
+                                                 GroupName="course"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Grid.Row="1" VerticalAlignment="Center" >
+                        <TextBlock Text="技术分类" VerticalAlignment="Center" Margin="0,0,10,0" Foreground="#666"/>
+                        <ItemsControl  ItemsSource="{Binding CategoryTechnology}">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <StackPanel Orientation="Horizontal"/>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <RadioButton Content="{Binding CategoryName}" IsChecked="{Binding IsSelected}" Template="{StaticResource CategoryItemButtonTemplate}"  Margin="5,0"
+                                                 GroupName="technology"/>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Grid.Row="2" VerticalAlignment="Center">
+                        <TextBlock Text="授课老师" VerticalAlignment="Center" Margin="0,0,10,0" Foreground="#666"/>
+                        <ItemsControl  ItemsSource="{Binding CategoryTeacher}">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <StackPanel Orientation="Horizontal"/>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <RadioButton Content="{Binding CategoryName}" IsChecked="{Binding IsSelected}" Template="{StaticResource CategoryItemButtonTemplate}"  Margin="5,0"
+                                                 GroupName="teacher"/>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </StackPanel>
+                </Grid>
+            </Border>
+        </Grid>
+    </Border>
 </UserControl>
