--- a/WpfApp1/View/LoginView.xaml
+++ b/WpfApp1/View/LoginView.xaml
@@ -70,12 +70,12 @@
                                     <ColumnDefinition Width="40"/>
                                     <ColumnDefinition/>
                                 </Grid.ColumnDefinitions>
-                                <TextBlock Text="&#xe603;"
-                                           FontFamily="D:\C#asp.Net core workplace\WpfApp1\WpfApp1\Asset\Fonts\iconfont.ttf"
-                                           FontSize="40"
+                                <TextBlock Text="&#xe90e;"
+                                           FontFamily="../Asset/Fonts/#iconfont"
+                                           FontSize="30"
                                            HorizontalAlignment="Center"
                                            VerticalAlignment="Center"
-                                           Foreground="Red"/>
+                                           Foreground="Blue"/>
                                 <ScrollViewer x:Name="PART_ContentHost" 
                                               Grid.Column="1" 
                                               Focusable="false" 
@@ -135,12 +135,12 @@
                                     <ColumnDefinition Width="40"/>
                                     <ColumnDefinition/>
                                 </Grid.ColumnDefinitions>
-                                <TextBlock Text="&#xe603;"
-                                           FontFamily="D:\C#asp.Net core workplace\WpfApp1\WpfApp1\Asset\Fonts\iconfont.ttf"
-                                           FontSize="40"
+                                <TextBlock Text="&#xe66b;"
+                                           FontFamily="../Asset/Fonts/#iconfont"
+                                           FontSize="30"
                                            HorizontalAlignment="Center"
                                            VerticalAlignment="Center"
-                                           Foreground="Red"/>
+                                           Foreground="Blue"/>
                                 <ScrollViewer x:Name="PART_ContentHost" 
                                               Grid.Column="1" 
                                               Focusable="false" 
@@ -200,12 +200,12 @@
                                     <ColumnDefinition/>
                                     <ColumnDefinition Width="80"/>
                                 </Grid.ColumnDefinitions>
-                                <TextBlock Text="&#xe603;"
-                                           FontFamily="D:\C#asp.Net core workplace\WpfApp1\WpfApp1\Asset\Fonts\iconfont.ttf"
-                                           FontSize="40"
+                                <TextBlock Text="&#xe623;"
+                                           FontFamily="../Asset/Fonts/#iconfont"
+                                           FontSize="30"
                                            HorizontalAlignment="Center"
                                            VerticalAlignment="Center"
-                                           Foreground="Red"/>
+                                           Foreground="Blue"/>
                                 <ScrollViewer x:Name="PART_ContentHost" 
                                               Grid.Column="1" 
                                               Focusable="false" 
@@ -213,7 +213,7 @@
                                               VerticalScrollBarVisibility="Hidden"
                                               VerticalAlignment="Center"
                                               MinHeight="20"/>
-                                <Image Source="D:\C#asp.Net core workplace\WpfApp1\WpfApp1\Asset\images\1.jpg" Grid.Column="2"/>
+                                <Image Source="../Asset/images/1.jpg" Grid.Column="2"/>
                             </Grid>
                            
                         </Border>
@@ -268,7 +268,7 @@
             <StackPanel VerticalAlignment="Bottom" Margin="0,0,0,20">
                 <Border Width="100" Height="100" Margin="0,0,0,10">
                     <Border.Background>
-                        <ImageBrush ImageSource="D:\C#asp.Net core workplace\WpfApp1\WpfApp1\Asset\images\1.jpg"/>
+                        <ImageBrush ImageSource="../Asset/images/1.jpg"/>
                     </Border.Background>
                 </Border>
                 <TextBlock Text="Wilkommen!!" HorizontalAlignment="Center" FontSize="30" FontStyle="Oblique" Foreground="White"/>
@@ -292,7 +292,7 @@
                 <PasswordBox Grid.Row="1" Height="40" Style="{DynamicResource PasswordBoxStyle1}"
                              common:PasswordHelper.Attach="True"
                              common:PasswordHelper.Password="{Binding LoginModel.Password,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
-                <TextBox Grid.Row="2" Text="{Binding LoginModel.ValidationCode}" Height="40" TextChanged="TextBox_TextChanged" Style="{DynamicResource ValidationCodeTextBoxStyle}"/>
+                <TextBox Grid.Row="2" Text="{Binding LoginModel.ValidationCode}" Height="40" TextChanged="TextBox_TextChanged" Style="{DynamicResource ValidationCodeTextBoxStyle}" Margin="0,15,0,9"/>
                 <Button Content="Login" Grid.Row="3" Height="40" Template="{StaticResource LoginButtonTemplate}"
                         Command="{Binding LoginCommand}"
                         CommandParameter="{Binding ElementName=window}"
@@ -319,12 +319,27 @@
                     <Border BorderBrush="#ddd" BorderThickness="0,0,0,1" VerticalAlignment="Center" Grid.Column="2"/>
                     <TextBlock Text="OR" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="center"/>
                 </Grid>
-                <UniformGrid Columns="5" Grid.Row="1">
-                    <Image Source="D:\C#asp.Net core workplace\WpfApp1\WpfApp1\Asset\images\1.jpg" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <UniformGrid Columns="5" Grid.Row="1" Margin="0,0,0,5">
+                    <TextBlock Text="&#xe82c;"
+                                           FontFamily="../Asset/Fonts/#iconfont"
+                                           FontSize="30"
+                                           HorizontalAlignment="Center"
+                                           VerticalAlignment="Center"
+                                           Foreground="Gray"/>
                     <Border Background="White"/>
-                    <Image Source="D:\C#asp.Net core workplace\WpfApp1\WpfApp1\Asset\images\1.jpg" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <TextBlock Text="&#xe635;"
+                                           FontFamily="../Asset/Fonts/#iconfont"
+                                           FontSize="30"
+                                           HorizontalAlignment="Center"
+                                           VerticalAlignment="Center"
+                                           Foreground="Gray"/>
                     <Border Background="White"/>
-                    <Image Source="D:\C#asp.Net core workplace\WpfApp1\WpfApp1\Asset\images\1.jpg" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <TextBlock Text="&#xe8db;"
+                                           FontFamily="../Asset/Fonts/#iconfont"
+                                           FontSize="30"
+                                           HorizontalAlignment="Center"
+                                           VerticalAlignment="Center"
+                                           Foreground="Gray"/>
                 </UniformGrid>
 
             </Grid>
